--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
     <h1>Welcome to the home page</h1>
+    <form>
+        <input type="text" name="username" placeholder="Username">
+        <input type="text" name="password" placeholder="Password">
+        <input type="button" value="Login" onclick="window.location.href='login.php'">
+        <input type="button" value="Register" onclick="window.location.href='register.php'">
+    </form>
+
 </body>
 </html>
