--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <link rel="stylesheet" type="text\css" href="estilos.css">
 </head>
 <body>
-    <h1>Welcome to the home page</h1>
-    <form>
-        <input type="text" name="username" placeholder="Username">
-        <input type="text" name="password" placeholder="Password">
-        <input type="button" value="Login" onclick="window.location.href='login.php'">
-        <input type="button" value="Register" onclick="window.location.href='register.php'">
-    </form>
-
+    <script src="main.js"></script>
 </body>
 </html>
