--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" type="text\css" href="estilos.css">
 </head>
 <body>
+    <h1>Ejemplo Formulario</h1>
+    <br>
+    <br>
+    <form>
+        <input type="text" id="nombre" name="nombre" placeholder="Ingrese Nombre">
+        <p id="errorNombre" style="display:none;"></p>
+        <input type="text" id="telefono" name="telefono" placeholder="xxx-xxxx-xxx">
+        <p id="errorApellido" style="display:none;"></p>
+    </form>
+    <button>Enviar</button>
     <script src="main.js"></script>
 </body>
 </html>
