nuevo JavaScript Nombre

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" id="telefono" name="telefono" placeholder="xxx-xxxx-xxx">
         <p id="errorApellido" style="display:none;"></p>
     </form>
-    <button>Enviar</button>
+    <button id="btnEnviar">Enviar</button> 
     <script src="main.js"></script>
 </body>
 </html>
