--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <form>
         <input type="text" id="nombre" name="nombre" placeholder="Ingrese Nombre">
         <p id="errorNombre" style="display:none;"></p>
-        <input type="text" id="telefono" name="telefono" placeholder="xxx-xxxx-xxx">
-        <p id="errorApellido" style="display:none;"></p>
+        <input type="text" id="telefono" name="telefono" placeholder="3xx-xxxx-xxx">
+        <p id="errorTelefono" style="display:none;"></p>
     </form>
     <button id="btnEnviar">Enviar</button> 
     <script src="main.js"></script>
